# TTstack

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yml  rust.yml
__tools/: fmt.sh  start.sh  vfio_bind.sh
__tools/images/: id_rsa
__tools/images/freebsd_vm/: rc.local_hostfwd
__tools/images/linux_vm/: README.md
__tools/images/linux_vm/firecracker_kernel_config/: centos:linux-3.10.0-1062.el7.x86_64  centos:linux-3.10.0-123.el7.x86_64  centos:linux-3.10.0-514.el7.x86_64  centos:linux-4.14.0-115.el7.0.1.x86_64  centos:linux-4.18.0-147.0.3.el8.x86_64  centos:linux-4.18.0-147.5.1.el8.x86_64  centos:linux-4.18.0-193.1.2.el8.x86_64  centos:linux-4.18.0-193.6.3.el8.x86_64  centos:linux-4.18.0-80.11.2.el8.x86_64  centos:linux-4.18.0-80.4.2.el8.x86_64  centos:linux-4.18.0-80.7.1.el8.x86_64  centos:linux-4.18.0-80.el8.x86_64  mainline-4.19.148-minimal-firecracker-dev
client/: Cargo.toml
client/src/: cfg_file.rs  cmd_line.rs  main.rs
client/src/ops/: config.rs  mod.rs  status.rs
client/src/ops/env/: del.rs  mod.rs  stop.rs  update.rs
client/src/ops/env/get/: mod.rs  scp.rs
client/src/ops/env/push/: mod.rs
client/src/ops/env/run/: ssh.rs
core/: Cargo.toml
core/src/: def.rs  lib.rs  test.rs
core/src/freebsd/: mod.rs
core/src/freebsd/nat/: env.rs
core/src/freebsd/vm/: mod.rs
core/src/linux/: mod.rs
core/src/linux/nat/: mod.rs
core/src/linux/vm/: cgroup.rs  util.rs
core/src/linux/vm/engine/: mod.rs  qemu.rs
core/src/linux/vm/engine/firecracker/: suitable_env.rs
core/src/mocker/: nat.rs
core_def/: Cargo.toml
core_def/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: auth.rs  config.rs  handler.rs  main.rs  runtime.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  deploy.rs  image_builder.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  auth.rs  lib.rs  model.rs  net.rs
crates/core/src/engine/: bhyve.rs  docker.rs  firecracker.rs  jail.rs  mod.rs  qemu.rs
crates/core/src/storage/: btrfs.rs  file.rs  mod.rs  raw.rs  zfs.rs  zvol.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: auth.rs  config.rs  db.rs  handler.rs  main.rs  scheduler.rs  web.rs
docs/: compatibility.md  deployment.md  guest-images.md  rest-api.md
documents/: arch_design.md  code_about.md  firecracker_kernel_notes.md  gitlab-runner.config.toml  roadmap.md  system_admin.md  user_guide.md
proxy/: Cargo.toml
proxy/src/: cfg.rs  def.rs  lib.rs  util.rs
proxy/src/hdr/: add_env.rs
proxy/tests/: integration.rs
proxy/tests/standalone/: mod.rs
rexec/: Cargo.toml
rexec/src/: common.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: cfg.rs  def.rs  lib.rs  util.rs
server/src/hdr/: mod.rs
server/tests/: integration.rs
server/tests/env/: mod.rs
server/tests/standalone/: mod.rs
server_def/: Cargo.toml
server_def/src/: included_ops_map.rs  lib.rs
src/client/: Cargo.toml  README.md
src/client/src/: cfg_file.rs  cmd_line.rs  lib.rs  main.rs
src/client/src/ops/: config.rs  mod.rs  status.rs
src/client/src/ops/env/: add.rs  del.rs  list.rs  listall.rs  mod.rs  show.rs  start.rs  stop.rs  update.rs
src/client/src/ops/env/get/: mod.rs  scp.rs  ttrexec.rs
src/client/src/ops/env/push/: mod.rs  scp.rs  ttrexec.rs
src/client/src/ops/env/run/: mod.rs  ssh.rs  ttrexec.rs
src/core/: Cargo.toml
src/core/src/: def.rs  lib.rs  test.rs
src/core/src/freebsd/: README.md
src/core/src/freebsd/nat/: mod.rs
src/core/src/freebsd/vm/: mod.rs
src/core/src/linux/: mod.rs
src/core/src/linux/nat/: mod.rs
src/core/src/linux/vm/: cgroup.rs  mod.rs  util.rs
src/core/src/linux/vm/engine/: mod.rs  qemu.rs
src/core/src/linux/vm/engine/firecracker/: mod.rs  suitable_env.rs  unsuitable_env.rs
src/core/src/mocker/: mod.rs  nat.rs  vm.rs
src/core_def/: Cargo.toml
src/core_def/src/: lib.rs
src/engine/: Cargo.toml  README.md
src/framework/: Cargo.toml  README.md
src/framework/src/: ctrl.rs  err.rs  lib.rs  model.rs  param.rs
src/proxy/: Cargo.toml
src/proxy/src/: def.rs  http.rs  lib.rs  uau.addr  util.rs
src/proxy/src/hdr/: add_env.rs  mod.rs  sync.rs
src/proxy/tests/env/: mod.rs
src/proxy/tests/knead/: mod.rs
src/proxy/tests/standalone/: mod.rs
src/rexec/: Cargo.toml  README.md
src/rexec/src/: client.rs  common.rs  lib.rs  sendfile.rs  server.rs
src/rexec/tests/: integration.rs
src/server/: Cargo.toml  README.md
src/server/src/: cfg.rs  init.rs  lib.rs  util.rs
src/server/src/hdr/: mod.rs  server.rs
src/server/tests/env/: mod.rs
src/server/tests/knead/: mod.rs
src/server/tests/standalone/: mod.rs
src/server_def/: Cargo.toml
src/server_def/src/: lib.rs
src/tt/: Cargo.toml
src/utils/: Cargo.toml
src/utils/src/: lib.rs
tools/: create-images.sh  deploy.sh  deploy.toml.example  firecracker_update_image.sh  fmt.sh  install.sh  net.start.gentoo  update_image.sh
tools/githooks/: pre-commit
tools/images/: README.md  baseimage_update.sh  id_rsa.pub
tools/images/freebsd_vm/: rc.local
tools/images/linux_vm/: rc.local  rc.local_hostfwd
tools/images/linux_vm/firecracker_kernel_config/: centos:linux-3.10.0-1127.el7.x86_64  centos:linux-3.10.0-229.el7.x86_64  centos:linux-3.10.0-327.el7.x86_64  centos:linux-3.10.0-693.el7.x86_64  centos:linux-3.10.0-862.el7.x86_64  centos:linux-3.10.0-957.el7.x86_64  centos:linux-4.18.0-147.3.1.el8.x86_64  centos:linux-4.18.0-147.8.1.el8.x86_64  centos:linux-4.18.0-147.el8.x86_64  centos:linux-4.18.0-193.14.2.el8.x86_64  centos:linux-4.18.0-193.19.1.el8.x86_64  centos:linux-4.18.0-193.el8.x86_64  centos:linux-4.18.0-80.1.2.el8.x86_64  centos:linux-4.18.0-80.11.1.el8.x86_64  centos:linux-4.18.0-80.7.2.el8.x86_64
tools/trash/: muslenv.sh
