[workspace]
members = [
    "src/core_def",
    "src/core",
    "src/server_def",
    "src/server",
    "src/proxy",
    "src/client",
    "src/rexec",
    "src/utils",
]

[profile.dev]
overflow-checks = true
panic = "unwind"

[profile.release]
lto = true
incremental = false
overflow-checks = false
panic = "unwind"

[profile.bench]
codegen-units = 1
overflow-checks = false
