[workspace]
members = [
    "src/tt",
    "src/client",
    "src/server",
    "src/framework",
    "src/engine",
]

[workspace.dependencies]
ruc = "4.1.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }

tt-engine = { path = "src/engine", version = "0.1.0" }
tt-framework = { path = "src/framework", version = "0.1.0" }

[profile.dev]
overflow-checks = true
panic = "unwind"

[profile.release]
lto = true
incremental = false
overflow-checks = false
panic = "unwind"

[profile.bench]
codegen-units = 1
overflow-checks = false
