[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/agent",
    "crates/ctl",
    "crates/cli",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["fh <hui.fan@mail.ru>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ruc = { version = "9.3", features = ["cmd"] }
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["net", "socket", "ioctl", "fs", "signal"] }
tempfile = "3"

[profile.release]
lto = true
incremental = false
overflow-checks = false
panic = "unwind"
