[package]
name = "tt"
version = "0.2.9"
authors = ["范辉 <fanhui.x@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
lazy_static = "1.4"

nix = "0.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"

threadpool = "1.8"

ttserver_def = { path = "../server_def" }
ttrexec = { path = "../rexec", default-features = false, features = [ "client" ] }
myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
