[package]
name = "ttproxy"
version = "0.2.10"
authors = ["范辉 <fanhui.x@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
lazy_static = "1.4"
parking_lot = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

async-std = "1.6.3"

ttserver_def = { path = "../server_def" }
myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }

[dev-dependencies]
nix = "0.18"
ttserver = { path = "../server" }

[features]
default = []
testmock = [ "ttserver/testmock" ]
