[package]
name = "tt"
description = "TTstack CLI — manage your private cloud from the command line."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
ttcore = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
ruc = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
