[package]
name = "tt-ctl"
description = "TTstack central controller — fleet management and VM scheduling."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tt-ctl"
path = "src/main.rs"

[dependencies]
ttcore = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
ruc = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
