[package]
name = "tt"
version = "0.3.2"

edition = "2024"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.26"
lazy_static = "1.5.0"

nix = { version = "0.29.0", features = ["fs"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }

threadpool = "1.8.1"

ttutils = { path = "../utils" }
ttserver_def = { path = "../server_def" }
ttrexec = { path = "../rexec", default-features = false, features = [ "client" ] }
ruc = "8.1.2"
