[package]
name = "ttcore"
version = "0.3.2"

edition = "2018"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
nix = "0.19"
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.11"
ttcore_def = { path = "../core_def" }

base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
futures = { version = "0.3.2", features = ["thread-pool"] }
futures-timer = "3.0.2"

[features]
default = [ "nft", "zfs" ]
cow = []
nft = []
zfs = []
testmock = []
