[package]
name = "tt-framework"
version = "0.1.0"

edition = "2021"
authors = ["hui.fan@mail.ru"]
description = "A simple private-cloud solution for developers and SMEs."
license = "GPL-3.0"
keywords = ["firecracker", "qemu", "docker", "openstack", "k8s"]
categories = ["command-line-utilities"]
homepage = "https://github.com/rust-util-collections/tt"

[dependencies]
ruc = { workspace = true }

once_cell = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }

[features]
