[package]
name = "ttproxy"
version = "0.3.2"

edition = "2024"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.26"
lazy_static = "1.5.0"
parking_lot = "0.12.3"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

axum = "0.8.1"
tide = "0.16.0"
tokio = { version = "1.42.0", features = ["full"] }
async-std = "1.13.0"
nix = { version = "0.29.0", features = ["socket", "uio", "zerocopy", "fs"] }

ttutils = { path = "../utils" }
ttserver_def = { path = "../server_def" }
ruc = "8.1.2"

[dev-dependencies]
reqwest = "0.12.9"
ttserver = { path = "../server" }

[features]
default = []
testmock = [ "ttserver/testmock" ]
