[package]
name = "ttrexec"
version = "0.3.2"

edition = "2018"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
nix = "0.18"
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jemallocator = { optional = true, version = "0.3.2" }

myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }

[features]
default = [ "server", "client" ]
server = [ "jemallocator" ]
client = []

[[bin]]
name = "ttrexec-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "ttrexec-cli"
path = "src/bin/cli.rs"
