[package]
name = "ttserver"
version = "0.3.2"

edition = "2018"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
nix = "0.19"
clap = "2.33"
lazy_static = "1.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

futures = { version = "0.3.2", features = ["thread-pool"] }
futures-timer = "3.0"

num_cpus = "1.13"
parking_lot = "0.11"

ttutils = { path = "../utils" }
ttcore = { path = "../core", default-features = false }
ttserver_def = { path = "../server_def" }

myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }

[features]
default = [ "nft", "zfs" ]
cow = [ "ttcore/cow" ]
nft = [ "ttcore/nft" ]
zfs = [ "ttcore/zfs" ]
testmock = [ "ttcore/testmock" ]
