[package]
name = "ttserver"
version = "0.3.2"

edition = "2024"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
nix = { version = "0.29.0", features = ["socket", "uio", "zerocopy", "fs"] }
clap = "4.5.26"

serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }

futures = { version = "0.3.31", features = ["thread-pool"] }
futures-timer = "3.0.3"

num_cpus = "1.16.0"
parking_lot = "0.12.3"

ttutils = { path = "../utils" }
ttcore = { path = "../core", default-features = false }
ttserver_def = { path = "../server_def" }

ruc = "8.1.2"

[features]
default = [ "nft", "zfs" ]
cow = [ "ttcore/cow" ]
nft = [ "ttcore/nft" ]
zfs = [ "ttcore/zfs" ]
testmock = [ "ttcore/testmock" ]
