[package]
name = "ttserver_def"
version = "0.3.2"

edition = "2024"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
ttcore_def = { path = "../core_def" }
ruc = "8.1.2"
