[package]
name = "tt"
version = "0.1.0"

edition = "2021"
authors = ["dafanhui@163.com", "hui.fan@mail.ru"]
description = "A simple private-cloud solution for developers and SMEs."
license = "GPL-3.0"
keywords = ["firecracker", "qemu", "docker", "openstack", "k8s"]
categories = ["command-line-utilities"]
homepage = "https://github.com/rust-util-collections/tt"

[dependencies]
tt-client = { path = "../client" }
tt-server = { path = "../server" }

[features]

[[bin]]
name = "tt"
path = "src/bins/client.rs"

[[bin]]
name = "ttd"
path = "src/bins/server.rs"

[[bin]]
name = "ttdproxy"
path = "src/bins/server_proxy.rs"
