[package]
name = "ttutils"
version = "0.3.2"

authors = ["FanHui <hui.fan@mail.ru>"]
edition = "2018"
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "kvm", "openstack", "k8s", "cloud"]
categories = ["command-line-utilities"]

[dependencies]
flate2 = "1.0"
myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }

[dev-dependencies]
rand = "0.7"
